--- a/package.json
+++ b/package.json
@@ -5,13 +5,30 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "test": "jest"
+  },
+  "jest": {
+    "preset": "jest-expo",
+    "transformIgnorePatterns": [
+      "node_modules/(?!react-native)/"
+    ],
+    "collectCoverage": true,
+    "collectCoverageFrom": [
+      "**/*.{js,jsx}",
+      "!**/coverage/**",
+      "!**/app/config/**",
+      "!**/app/services/**",
+      "!**/node_modules/**",
+      "!**/babel.config.js",
+      "!**/jest.setup.js"
+    ]
   },
   "dependencies": {
     "expo": "^35.0.0",
-    "react": "16.8.3",
+    "react": "16.8.6",
     "react-art": "^16.10.2",
-    "react-dom": "^16.10.2",
+    "react-dom": "16.8.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
     "react-native-elements": "^1.2.6",
     "react-native-web": "^0.11.7",
@@ -20,7 +37,9 @@
     "react-scripts": "^3.2.0"
   },
   "devDependencies": {
-    "babel-preset-expo": "^7.0.0"
+    "babel-preset-expo": "^7.0.0",
+    "jest-expo": "^35.0.0",
+    "react-test-renderer": "16.8.6"
   },
   "private": true
 }
