--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
     "react": "16.8.6",
     "react-art": "^16.10.2",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
+    "react-native-checkbox-group": "^1.0.3",
     "react-native-elements": "^1.2.6",
     "react-native-gesture-handler": "^1.4.1",
+    "react-native-paper": "^3.1.1",
     "react-native-reanimated": "^1.3.0",
     "react-native-vector-icons": "^6.6.0",
     "react-native-web": "^0.11.7",
