--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
       "!**/app/services/**",
       "!**/node_modules/**",
       "!**/babel.config.js",
-      "!**/jest.setup.js"
+      "!**/jest.setup.js",
+      "!**/App.js"
     ]
   },
   "dependencies": {
@@ -32,16 +33,19 @@
     "react": "16.8.6",
     "react-art": "^16.10.2",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
+    "react-native-action-button": "^2.8.5",
     "react-native-checkbox-group": "^1.0.3",
     "react-native-elements": "^1.2.6",
-    "react-native-gesture-handler": "^1.4.1",
+    "react-native-gesture-handler": "~1.3.0",
     "react-native-paper": "^3.1.1",
-    "react-native-reanimated": "^1.3.0",
+    "react-native-reanimated": "~1.2.0",
     "react-native-vector-icons": "^6.6.0",
     "react-native-web": "^0.11.7",
     "react-navigation": "^4.0.10",
-    "react-navigation-drawer": "^2.3.2",
+    "react-navigation-drawer": "^2.3.3",
+    "react-navigation-material-bottom-tabs": "^2.1.5",
     "react-navigation-stack": "^1.10.3",
+    "react-navigation-tabs": "^2.5.6",
     "react-router-dom": "^5.1.2",
     "react-router-native": "^5.1.2",
     "react-scripts": "^3.2.0"
