--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     ]
   },
   "dependencies": {
+    "@babel/core": "^7.6.4",
     "expo": "^35.0.0",
     "react": "16.8.6",
     "react-art": "^16.10.2",
@@ -48,7 +49,8 @@
     "react-navigation-tabs": "^2.5.6",
     "react-router-dom": "^5.1.2",
     "react-router-native": "^5.1.2",
-    "react-scripts": "^3.2.0"
+    "react-scripts": "^3.2.0",
+    "react-dom": "16.8.6"
   },
   "devDependencies": {
     "babel-preset-expo": "^7.0.0",
@@ -56,7 +58,6 @@
     "enzyme-adapter-react-16": "^1.15.1",
     "expo-cli": "^3.4.1",
     "jest-expo": "^35.0.0",
-    "react-dom": "^16.8.6",
     "react-test-renderer": "16.8.6"
   },
   "private": true
