--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "expo": "^35.0.0",
     "react": "16.8.6",
     "react-art": "^16.10.2",
+    "react-dom": "16.8.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
     "react-native-action-button": "^2.8.5",
     "react-native-checkbox-group": "^1.0.3",
@@ -49,8 +50,7 @@
     "react-navigation-tabs": "^2.5.6",
     "react-router-dom": "^5.1.2",
     "react-router-native": "^5.1.2",
-    "react-scripts": "^3.2.0",
-    "react-dom": "16.8.6"
+    "react-scripts": "^3.2.0"
   },
   "devDependencies": {
     "babel-preset-expo": "^7.0.0",
