--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
   "dependencies": {
     "@babel/core": "^7.6.4",
     "@react-native-community/async-storage": "^1.6.2",
-    "expo": "^35.0.0",
+    "expo": "^36.0.2",
+    "global": "^4.4.0",
     "react": "16.8.6",
     "react-art": "^16.10.2",
     "react-dom": "16.8.6",
@@ -55,13 +56,14 @@
     "react-navigation-tabs": "^2.5.6",
     "react-router-dom": "^5.1.2",
     "react-router-native": "^5.1.2",
-    "react-scripts": "^3.2.0"
+    "react-scripts": "^3.2.0",
+    "rnpm": "^1.9.0"
   },
   "devDependencies": {
     "babel-preset-expo": "^7.0.0",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.15.1",
-    "expo-cli": "^3.4.1",
+    "expo-cli": "^3.11.3",
     "jest-expo": "^35.0.0",
     "react-test-renderer": "16.8.6"
   },
