--- a/package.json
+++ b/package.json
@@ -42,9 +42,9 @@
     "react-native-action-button": "^2.8.5",
     "react-native-checkbox-group": "^1.0.3",
     "react-native-elements": "^1.2.6",
-    "react-native-gesture-handler": "~1.3.0",
+    "react-native-gesture-handler": "^1.5.3",
     "react-native-paper": "^3.1.1",
-    "react-native-reanimated": "~1.2.0",
+    "react-native-reanimated": "^1.4.0",
     "react-native-snap-carousel": "^3.8.4",
     "react-native-switch-selector": "^2.0.0",
     "react-native-vector-icons": "^6.6.0",
