--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-native-gesture-handler": "^1.5.3",
     "react-native-paper": "^3.1.1",
     "react-native-reanimated": "^1.4.0",
+    "react-native-screens": "^2.0.0-alpha.32",
     "react-native-snap-carousel": "^3.8.4",
     "react-native-switch-selector": "^2.0.0",
     "react-native-vector-icons": "^6.6.0",
